<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".drycleaners.activities.SignUpActivity">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </com.google.android.material.appbar.AppBarLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_gravity="center_horizontal"
                    android:layout_width="200dp"
                    android:layout_height="80dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/padmavati_logo" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:textCursorDrawable="@null"
                    android:textColor="@color/text_color"
                    android:textSize="15dp"
                    android:id="@+id/fullName"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/edit_shape"
                    android:drawableLeft="@drawable/ic_accou"
                    android:drawablePadding="10dp"
                    android:elevation="5dp"
                    android:hint="@string/name"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="15dp"
                    android:textColorHint="@color/hint_color" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:textCursorDrawable="@null"
                    android:textColor="@color/text_color"
                    android:textSize="15dp"
                    android:id="@+id/adress"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="7dp"
                    android:background="@drawable/edit_shape"
                    android:drawableLeft="@drawable/ic_location"
                    android:drawablePadding="10dp"
                    android:elevation="5dp"
                    android:hint="@string/address"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="15dp"
                    android:textColorHint="@color/hint_color" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:textCursorDrawable="@null"
                    android:textColor="@color/text_color"
                    android:textSize="15dp"
                    android:id="@+id/mobileNumber"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="7dp"
                    android:background="@drawable/edit_shape"
                    android:drawableLeft="@drawable/ic_call"
                    android:drawablePadding="10dp"
                    android:elevation="5dp"
                    android:hint="@string/mobile"
                    android:inputType="number"
                    android:maxLength="10"
                    android:minLines="10"
                    android:paddingLeft="15dp"
                    android:textColorHint="@color/hint_color" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:textCursorDrawable="@null"
                    android:textColor="@color/text_color"
                    android:textSize="15dp"
                    android:id="@+id/pinNumber"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="7dp"
                    android:background="@drawable/edit_shape"
                    android:drawableLeft="@drawable/ic_pincode"
                    android:drawablePadding="10dp"
                    android:elevation="5dp"
                    android:hint="@string/pinno"
                    android:inputType="number"
                    android:paddingLeft="15dp"
                    android:textColorHint="@color/hint_color" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:textCursorDrawable="@null"
                    android:textColor="@color/text_color"
                    android:textSize="15dp"
                    android:id="@+id/emailID"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="7dp"
                    android:background="@drawable/edit_shape"
                    android:drawableLeft="@drawable/ic_email"
                    android:drawablePadding="10dp"
                    android:elevation="5dp"
                    android:hint="Email"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="15dp"
                    android:textColorHint="@color/hint_color" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:textCursorDrawable="@null"
                    android:textColor="@color/text_color"
                    android:textSize="15dp"
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="7dp"
                    android:background="@drawable/edit_shape"
                    android:drawableLeft="@drawable/ic_pass"
                    android:drawablePadding="10dp"
                    android:elevation="5dp"
                    android:hint="@string/pass"
                    android:inputType="textPassword"
                    android:paddingLeft="15dp"
                    android:textColorHint="@color/hint_color" />


                <androidx.appcompat.widget.AppCompatEditText
                    android:textCursorDrawable="@null"
                    android:textColor="@color/text_color"
                    android:textSize="15dp"
                    android:id="@+id/refer_code_id"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="7dp"
                    android:background="@drawable/edit_shape"
                    android:drawableLeft="@drawable/ic_code_black_24dp"
                    android:drawablePadding="10dp"
                    android:elevation="5dp"
                    android:hint="@string/refer"
                    android:inputType="textPassword"
                    android:paddingLeft="15dp"
                    android:textColorHint="@color/hint_color" />
<!--

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_marginTop="20dp"

                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <CheckBox
                        android:layout_marginTop="10dp"
                        android:onClick="onCheckedTerms"
                        android:layout_gravity="bottom"
                        android:fontFamily="serif"
                        android:textSize="15dp"
                        android:layout_weight="1"
                        android:id="@+id/checkBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Terms &amp; Conditions"
                        android:textColor="@color/white"
                        android:layout_marginBottom="4dp"/>




                </LinearLayout>
-->


                <RelativeLayout
                    android:layout_marginTop="20dp"
                    android:id="@+id/sign_btn"
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:src="@drawable/btn_shape" />

                    <TextView
                        android:fontFamily="serif"
                        android:id="@+id/signup_BTN"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:text="Sign Up"
                        android:textColor="@color/buttonTextColor"
                        android:textSize="20sp" />
                </RelativeLayout>


            </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>