<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".drycleaners.activities.LoginActivity">

    <com.google.android.material.appbar.AppBarLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="50dp"
                android:fontFamily="serif"
                android:textSize="20dp"
                android:textColor="@android:color/white"
                android:gravity="center_horizontal"
                android:text="Welcome to Padmavati Dry Cleaners"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="200dp"
                android:layout_height="80dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/padmavati_logo" />

            <androidx.appcompat.widget.AppCompatEditText
                android:textCursorDrawable="@null"
                android:textColor="@color/text_color"
                android:id="@+id/email_text"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/edit_shape"
                android:drawableLeft="@drawable/ic_call"
                android:drawablePadding="10dp"
                android:elevation="5dp"
                android:maxLength="10"
                android:hint="@string/email"
                android:inputType="number"
                android:paddingLeft="15dp"
                android:textColorHint="@color/hint_color" />

            <androidx.appcompat.widget.AppCompatEditText
                android:textCursorDrawable="@null"
                android:textColor="@color/text_color"
                android:id="@+id/password_text"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="7dp"
                android:background="@drawable/edit_shape"
                android:drawableLeft="@drawable/ic_pass"
                android:drawablePadding="10dp"
                android:elevation="5dp"
                android:hint="@string/pass"
                android:inputType="textPassword"
                android:paddingLeft="15dp"
                android:textColorHint="@color/hint_color" />

            <RelativeLayout
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:src="@drawable/btn_shape" />

                <TextView

                    android:id="@+id/login_BTN"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:background="@color/buttoncolor"
                    android:fontFamily="serif"
                    android:gravity="center"
                    android:text="Login"
                    android:textColor="@color/buttonTextColor"
                    android:textSize="20sp" />
            </RelativeLayout>




            <LinearLayout
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:id="@+id/laysinup"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <CheckBox
                    android:onClick="onChecked"
                    android:layout_gravity="bottom"
                    android:fontFamily="serif"
                    android:textSize="15dp"
                    android:layout_weight="1"
                    android:id="@+id/checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Remember Me"
                    android:textColor="#E04034"
                    android:layout_marginBottom="10dp"/>

                <View
                    android:layout_gravity="bottom"
                    android:layout_marginTop="30dp"
                    android:id="@+id/view"
                    android:layout_width="1dp"
                    android:layout_height="30dp"
                    android:background="#E04034"
                    android:layout_marginBottom="20dp" />

                <TextView
                    android:layout_gravity="bottom"
                    android:fontFamily="serif"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="#E04034"
                    android:id="@+id/forgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Forgot Password?"
                    android:textSize="15sp"
                    android:layout_marginBottom="10dp"/>


            </LinearLayout>

            <RelativeLayout
                android:src="@drawable/btn_shape"
                android:id="@+id/si_id"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="5dp">

                <TextView
                    android:background="@drawable/btn_shape"
                    android:layout_centerVertical="true"
                    android:fontFamily="serif"
                    android:gravity="center"
                    android:textColor="@color/buttonTextColor"
                    android:id="@+id/new_userSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/don_t_have_an_account_signup"
                    android:textSize="20sp" />

            </RelativeLayout>

        </LinearLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>